# ad-placement-service

./: .dockerignore  .env  .env.docker  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
src/: app.py  config.py  logger.py
src/api/: advert.py  auth.py  comment.py  complaints.py  user.py
src/db/: __init__.py  db.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2024_03_06_1523-410dc934a43a_added_user_model.py  2024_03_06_1547-962d0a3415d8_extra_fields_for_user_model.py  2024_03_06_1703-99396e86290f_added_all_other_models.py  2024_03_06_2038-e5e70a132a75_some2.py  2024_03_07_1319-82cd8a3085d9_deleted_hidden_column_from_advert_table.py  2024_03_07_1610-52a8d2ef3cad_fixed_comment_model.py  2024_03_08_1447-9deca8cdf2bf_added_banned_field_to_user.py
src/models/: __init__.py  advert.py  base.py  comment.py  complaint.py  session.py  user.py
src/schemas/: __init__.py  advert.py  base.py  complaint.py
src/services/: advert_service.py  comment_service.py  complaint_service.py  session_service.py  user_service.py
src/shemas/: __init__.py  advert.py  base.py  comment.py  complaint.py  misc.py  user.py
